   * Indicate which search option is active in Wikipedia applet (BR 332010)

  CHANGES:
   * Amarok now depends on KDE Frameworks 5.78.
   * Improve strings in user interface (incl. BR 343896, BR 234854)

  BUGFIXES:
   * Various tag match bias, APG and collection filtering related fixes (BR 375565,
     BR 406751, BR 435810, BR 382456)


VERSION 3.0.0
  FEATURES:
   * Added a visual hint that context view applets can be resized in edit mode.
   * Display missing metadata errors in Wikipedia applet UI.
   * Add a button to stop automatic Wikipedia page updating. (BR 485813)

  CHANGES:
   * Replace defunct lyricwiki with lyrics.ovh as lyrics provider for now. (BR 455937)
   * Show only relevant items in wikipedia applet right click menu (BR 323941), use
     monobook skin for opened links and silently ignore non-wikipedia links.
   * Don't show non-functional play mode controls in dynamic mode (BR 287055)

  BUGFIXES:
   * Fix loading of some Flickr photos in the photos context view applet and show
     more relevant photos. (BR 317108)
   * Fix playlist inline play control slider knob & draw playlist delegate icons with
     higher DPI.
   * Fix searching for composer and album info for local files in Wikipedia applet.
   * Don't remove wrong songs from collection when contents of a folder, whose name is
     a substring of another collection folder, are changed (BR 475528)
   * Prefer symbolic systray icon to fix colours in Plasma6 systray (BR 485748)


VERSION 2.9.82
  FEATURES:
   * Enable dragging and dropping tracks from context view to playlist again. (BR 439736)
   * Add menu entry for collapsing all expanded items in collection view. (BR 244509)
   * Show song progress on OSD (BR 278445), make only background translucent (BR 187781)
   * Allow copying track details by clicking on current track context applet. (BR 283457)
   * Allow drag&drop rearranging in queue editor. (BR 263563)
   * Added support for FFmpeg 5.0. (BR 459933)